<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_main_bg" >

    <LinearLayout
        android:id="@+id/frameLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/login_bg"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="3dp"
        android:paddingTop="10dp" >

        <LinearLayout
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <EditText
                android:id="@+id/editText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/input_login_bg"
                android:gravity="center_vertical"
                android:hint="@string/hint_input_account"
                android:paddingLeft="8dp"
                android:paddingRight="8dp" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="3dp"
            android:gravity="center" >

            <EditText
                android:id="@+id/editText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/input_login_bg"
                android:gravity="center_vertical"
                android:hint="@string/hint_input_pwd"
                android:inputType="textPassword"
                android:paddingLeft="8dp"
                android:paddingRight="8dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_login_bg"
                android:text="@string/login"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/color_ffffff" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/frameLogin"
        android:layout_centerHorizontal="true"
        android:src="@drawable/app_title" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/frameLogin"
        android:layout_centerHorizontal="true"
        android:src="@drawable/login_bg_daoying" />

</RelativeLayout>